feat: set timezone with daylight saving time
use posix timezones.

https://github.com/nayarsystems/posix_tz_db/blob/master/zones.csv

https://randomnerdtutorials.com/esp32-ntp-timezones-daylight-saving/

--- a/yoRadio/data/www/settings.html
+++ b/yoRadio/data/www/settings.html
@@ -104,12 +104,8 @@
           <div class="title"><span>timezone</span></div><div class="reset" data-name="timezone"></div>
           <div class="flex-row">
             <div class="inputwrap">
-              <span class="inputtitle">hours</span>
-              <input type="number" id="tzhour" class="textinput" name="tzhour" value="" maxlength="3" min="-12" max="14" />
-            </div>
-            <div class="inputwrap">
-              <span class="inputtitle">minutes</span>
-              <input type="number" id="tzmin" class="textinput" name="tzmin" value="" maxlength="2" min="0" max="45" step="15" />
+              <span class="inputtitle">timezone in posix</span>
+              <input type="text" id="timezone_posix" class="textinput" name="timezone_posix" value="" maxlength="34" />
             </div>
           </div>
           <div class="flex-row">
